+ yg di slider company profile, location link nya ke "accommodation-destination.html"

25.02.19
+ tambah button logout di myaccoutn
+ update html, checkbox dipindah ke dalam form

26.02.19
+ update html filter

05.03.19
+ update myaccount-reservation.html dan my-reservation.html
+ update style.css

11.03.19
+ update style.css
+ update style.js
+ update script.js, cari comment "Tommy 11.03.19"
+ accommodation-room.html
+ accommodation-cafe.html
+ accommodation-meeting.html
+ notes:
	+ fixed news all & corporate responsibility all style
	+ fixed filter style in myaccount
	+ change input date font color in filter

	14.03.19
	+ update style.css
	+ tambah halaman promotion-by-month.html
	+ tambah halaman support-single.html

	15.03.19
	+ update style.css
	+ style notification (contoh ada di halaman login.html)

	18.03.19
	+ update style.css
	+ update html newsletter di footer, cari comment "18.03.19"

	18.03.19 II
	+ update style.css
	+ update html convert point, cari "add label 18.03.19"

	20.03.19
	+ update style.css
	+ update html di "myaccount-loyalty.html", cari <!-- 20.03.19 -->
	+ update wording label dan button di "loyalty-redeem-convert.html"
	+ Opsi IDR dan USD di header homepage di hilangkan
	+ update html di "loyalty-earn.html", cari <!-- 20.03.19 --> (field currency di take out, lalu placeholder "Stay Rates diubah jadi "Stay Rates (IDR)")
	+ Icon FB dan Google untuk social login di take out
	+ ganti wording di page sign up, “Address” edit jadi “Mailing Address”

	25.03.19
	+ update style.css
	+ update html instagram-feed.html, cari "25.03.19"
	+ update html cafe dan meeting room di accommodation-detail.html, cari "25.03.19"

	05.04.19
	+ update style.css
	+ update career.html
	+ tambah career-detail.html
	+ update procurement.html
	+ tambah procurement-detail.html

	08.04.19
	+ update script.js, cari comment "TOMMY 08.04.19"
	+ update html header di halaman myaccount, cari comment "TOMMY 08.04.19"