@@ -70,3 +70,4 @@
 	08.04.19
 	+ update script.js, cari comment "TOMMY 08.04.19"
 	+ update html header di halaman myaccount, cari comment "TOMMY 08.04.19"
+	+ update style.js
